--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "devDependencies": {
         "live-server": "^1.2.2",
         "tailwindcss": "^3.0.24"
+    },
+    "dependencies": {
+        "animate.css": "^4.1.1"
     }
 }
